--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,5 @@
 body{
     background-color:red;
 }
+/*В общем,тут этот код закоментирован и всё что в нём пишется - является комментарием*/
+/*Пропиши тут header и т.п*/
